# crossbeam-automation

./: .env  .gitignore  README.md  cursor-rules.md  main.html  main.py  package.json  pyproject.toml  scoring_weights.db  test_suggestion_caching.py  utils.py  utils_2.py
data/: crossbeam_records_50.json  utils.py  we.json
scripts/: context_prompt.py  llm_utils.py  overlap_utils.py
